// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createMacOSColorAliasTokens test mode: dark, isHighContrast: false 1`] = `
Object {
  "brandBackground": "#0086f0",
  "brandBackground2": "#092c47",
  "brandBackgroundDisabled": "#575757",
  "brandBackgroundHover": "#1890f1",
  "brandBackgroundPressed": "#1890f1",
  "brandBackgroundSelected": "#3aa0f3",
  "brandBackgroundStatic": "#0086f0",
  "brandForeground1": "#0086f0",
  "brandForeground1Disabled": "#c2c2c2",
  "brandForeground1Pressed": "#6cb8f6",
  "brandForeground2": "#092c47",
  "brandForegroundLink": "#043862",
  "brandForegroundLinkHover": "#092c47",
  "brandForegroundLinkPressed": "#0078d4",
  "brandForegroundLinkSelected": "#092c47",
  "brandStroke1": "#0086f0",
  "brandStroke2": "#004c87",
  "compoundBrandBackground1": "#0086f0",
  "compoundBrandBackground1Hover": "#1890f1",
  "compoundBrandBackground1Pressed": "#6cb8f6",
  "compoundBrandForeground1": "#043862",
  "compoundBrandForeground1Hover": "#092c47",
  "compoundBrandForeground1Pressed": "#0078d4",
  "compoundBrandStroke1": "#0086f0",
  "compoundBrandStroke1Hover": "#1890f1",
  "compoundBrandStroke1Pressed": "#6cb8f6",
  "neutralBackground1": "#000000",
  "neutralBackground1Hover": "#3d3d3d",
  "neutralBackground1Pressed": "#5c5c5c",
  "neutralBackground1Selected": "#383838",
  "neutralBackground2": "#575757",
  "neutralBackground2Hover": "#333333",
  "neutralBackground2Pressed": "#707070",
  "neutralBackground2Selected": "#2e2e2e",
  "neutralBackground3": "#575757",
  "neutralBackground3Hover": "#292929",
  "neutralBackground3Pressed": "#0a0a0a",
  "neutralBackground3Selected": "#242424",
  "neutralBackground4": "#1f1f1f",
  "neutralBackground4Hover": "#1f1f1f",
  "neutralBackground4Pressed": "#000000",
  "neutralBackground4Selected": "#1a1a1a",
  "neutralBackground5": "#5c5c5c",
  "neutralBackground5Hover": "#141414",
  "neutralBackground5Pressed": "#050505",
  "neutralBackground5Selected": "#0f0f0f",
  "neutralBackground6": "#333333",
  "neutralBackgroundDisabled": "#575757",
  "neutralBackgroundInverted": "#ffffff",
  "neutralForeground1": "#ffffff",
  "neutralForeground1Hover": "#ffffff",
  "neutralForeground1Pressed": "#ffffff",
  "neutralForeground1Selected": "#ffffff",
  "neutralForeground2": "#ffffff",
  "neutralForeground2BrandHover": "#092c47",
  "neutralForeground2BrandPressed": "#0078d4",
  "neutralForeground2BrandSelected": "#092c47",
  "neutralForeground2Hover": "#ffffff",
  "neutralForeground2Pressed": "#ffffff",
  "neutralForeground2Selected": "#ffffff",
  "neutralForeground3": "#adadad",
  "neutralForeground3BrandHover": "#092c47",
  "neutralForeground3BrandPressed": "#0078d4",
  "neutralForeground3BrandSelected": "#092c47",
  "neutralForeground3Hover": "#d6d6d6",
  "neutralForeground3Pressed": "#d6d6d6",
  "neutralForeground3Selected": "#d6d6d6",
  "neutralForeground4": "#858585",
  "neutralForegroundDisabled": "#b8b8b8",
  "neutralForegroundInverted": "#ffffff",
  "neutralForegroundInvertedLink": "#292929",
  "neutralForegroundInvertedLinkHover": "#292929",
  "neutralForegroundInvertedLinkPressed": "#292929",
  "neutralForegroundInvertedLinkSelected": "#292929",
  "neutralForegroundOnBrand": "#ffffff",
  "neutralForegroundOnBrandHover": "#ffffff",
  "neutralForegroundOnBrandPressed": "#ffffff",
  "neutralForegroundOnBrandSelected": "#ffffff",
  "neutralStencil1": "#333333",
  "neutralStencil2": "#575757",
  "neutralStroke1": "#3d3d3d",
  "neutralStroke1Hover": "#757575",
  "neutralStroke1Pressed": "#6b6b6b",
  "neutralStroke1Selected": "#707070",
  "neutralStroke2": "#575757",
  "neutralStroke3": "#666666",
  "neutralStrokeAccessible": "#adadad",
  "neutralStrokeAccessibleHover": "#bdbdbd",
  "neutralStrokeAccessiblePressed": "#b3b3b3",
  "neutralStrokeAccessibleSelected": "#0086f0",
  "neutralStrokeDisabled": "#525252",
  "redBackground1": "#230308",
  "redBackground2": "#420610",
  "redBackground3": "#750b1c",
  "redBorder1": "#750b1c",
  "redBorder2": "#962f3f",
  "redBorderActive": "#ac4f5e",
  "redForeground1": "#ac4f5e",
  "redForeground2": "#420610",
  "redForeground3": "#750b1c",
  "strokeFocus1": "#000000",
  "strokeFocus2": "#ffffff",
  "subtleBackground": "transparent",
  "subtleBackgroundHover": "#3d3d3d",
  "subtleBackgroundPressed": "#1f1f1f",
  "subtleBackgroundSelected": "#383838",
  "transparentBackground": "transparent",
  "transparentBackgroundHover": "transparent",
  "transparentBackgroundPressed": "transparent",
  "transparentBackgroundSelected": "transparent",
  "transparentStroke": "transparent",
  "transparentStrokeDisabled": "transparent",
  "transparentStrokeInteractive": "transparent",
}
`;

exports[`createMacOSColorAliasTokens test mode: dark, isHighContrast: true 1`] = `
Object {
  "brandBackground": "#0086f0",
  "brandBackground2": "#092c47",
  "brandBackgroundDisabled": "#575757",
  "brandBackgroundHover": "#1890f1",
  "brandBackgroundPressed": "#1890f1",
  "brandBackgroundSelected": "#3aa0f3",
  "brandBackgroundStatic": "#0086f0",
  "brandForeground1": "#0086f0",
  "brandForeground1Disabled": "#c2c2c2",
  "brandForeground1Pressed": "#6cb8f6",
  "brandForeground2": "#092c47",
  "brandForegroundLink": "#043862",
  "brandForegroundLinkHover": "#092c47",
  "brandForegroundLinkPressed": "#0078d4",
  "brandForegroundLinkSelected": "#092c47",
  "brandStroke1": "#0086f0",
  "brandStroke2": "#004c87",
  "compoundBrandBackground1": "#0086f0",
  "compoundBrandBackground1Hover": "#1890f1",
  "compoundBrandBackground1Pressed": "#6cb8f6",
  "compoundBrandForeground1": "#043862",
  "compoundBrandForeground1Hover": "#092c47",
  "compoundBrandForeground1Pressed": "#0078d4",
  "compoundBrandStroke1": "#0086f0",
  "compoundBrandStroke1Hover": "#1890f1",
  "compoundBrandStroke1Pressed": "#6cb8f6",
  "neutralBackground1": "#000000",
  "neutralBackground1Hover": "#3d3d3d",
  "neutralBackground1Pressed": "#5c5c5c",
  "neutralBackground1Selected": "#383838",
  "neutralBackground2": "#575757",
  "neutralBackground2Hover": "#333333",
  "neutralBackground2Pressed": "#707070",
  "neutralBackground2Selected": "#2e2e2e",
  "neutralBackground3": "#575757",
  "neutralBackground3Hover": "#292929",
  "neutralBackground3Pressed": "#0a0a0a",
  "neutralBackground3Selected": "#242424",
  "neutralBackground4": "#1f1f1f",
  "neutralBackground4Hover": "#1f1f1f",
  "neutralBackground4Pressed": "#000000",
  "neutralBackground4Selected": "#1a1a1a",
  "neutralBackground5": "#5c5c5c",
  "neutralBackground5Hover": "#141414",
  "neutralBackground5Pressed": "#050505",
  "neutralBackground5Selected": "#0f0f0f",
  "neutralBackground6": "#333333",
  "neutralBackgroundDisabled": "#575757",
  "neutralBackgroundInverted": "#ffffff",
  "neutralForeground1": "#ffffff",
  "neutralForeground1Hover": "#ffffff",
  "neutralForeground1Pressed": "#ffffff",
  "neutralForeground1Selected": "#ffffff",
  "neutralForeground2": "#ffffff",
  "neutralForeground2BrandHover": "#092c47",
  "neutralForeground2BrandPressed": "#0078d4",
  "neutralForeground2BrandSelected": "#092c47",
  "neutralForeground2Hover": "#ffffff",
  "neutralForeground2Pressed": "#ffffff",
  "neutralForeground2Selected": "#ffffff",
  "neutralForeground3": "#d6d6d6",
  "neutralForeground3BrandHover": "#092c47",
  "neutralForeground3BrandPressed": "#0078d4",
  "neutralForeground3BrandSelected": "#092c47",
  "neutralForeground3Hover": "#d6d6d6",
  "neutralForeground3Pressed": "#d6d6d6",
  "neutralForeground3Selected": "#d6d6d6",
  "neutralForeground4": "#d6d6d6",
  "neutralForegroundDisabled": "#b8b8b8",
  "neutralForegroundInverted": "#ffffff",
  "neutralForegroundInvertedLink": "#292929",
  "neutralForegroundInvertedLinkHover": "#292929",
  "neutralForegroundInvertedLinkPressed": "#292929",
  "neutralForegroundInvertedLinkSelected": "#292929",
  "neutralForegroundOnBrand": "#ffffff",
  "neutralForegroundOnBrandHover": "#ffffff",
  "neutralForegroundOnBrandPressed": "#ffffff",
  "neutralForegroundOnBrandSelected": "#ffffff",
  "neutralStencil1": "#333333",
  "neutralStencil2": "#575757",
  "neutralStroke1": "#adadad",
  "neutralStroke1Hover": "#757575",
  "neutralStroke1Pressed": "#6b6b6b",
  "neutralStroke1Selected": "#707070",
  "neutralStroke2": "#a8a8a8",
  "neutralStroke3": "#adadad",
  "neutralStrokeAccessible": "#d6d6d6",
  "neutralStrokeAccessibleHover": "#bdbdbd",
  "neutralStrokeAccessiblePressed": "#b3b3b3",
  "neutralStrokeAccessibleSelected": "#0086f0",
  "neutralStrokeDisabled": "#525252",
  "redBackground1": "#230308",
  "redBackground2": "#420610",
  "redBackground3": "#750b1c",
  "redBorder1": "#750b1c",
  "redBorder2": "#962f3f",
  "redBorderActive": "#ac4f5e",
  "redForeground1": "#ac4f5e",
  "redForeground2": "#420610",
  "redForeground3": "#750b1c",
  "strokeFocus1": "#000000",
  "strokeFocus2": "#ffffff",
  "subtleBackground": "transparent",
  "subtleBackgroundHover": "#3d3d3d",
  "subtleBackgroundPressed": "#1f1f1f",
  "subtleBackgroundSelected": "#383838",
  "transparentBackground": "transparent",
  "transparentBackgroundHover": "transparent",
  "transparentBackgroundPressed": "transparent",
  "transparentBackgroundSelected": "transparent",
  "transparentStroke": "#3aa0f3",
  "transparentStrokeDisabled": "#d6d6d6",
  "transparentStrokeInteractive": "#a8a8a8",
}
`;

exports[`createMacOSColorAliasTokens test mode: light, isHighContrast: false 1`] = `
Object {
  "brandBackground": "#0078d4",
  "brandBackground2": "#eff6fc",
  "brandBackgroundDisabled": "#d1d1d1",
  "brandBackgroundHover": "#106ebe",
  "brandBackgroundPressed": "#106ebe",
  "brandBackgroundSelected": "#005a9e",
  "brandBackgroundStatic": "#0078d4",
  "brandForeground1": "#0078d4",
  "brandForeground1Disabled": "#757575",
  "brandForeground1Pressed": "#004578",
  "brandForeground2": "#106ebe",
  "brandForegroundLink": "#0078d4",
  "brandForegroundLinkHover": "#106ebe",
  "brandForegroundLinkPressed": "#004578",
  "brandForegroundLinkSelected": "#005a9e",
  "brandStroke1": "#0078d4",
  "brandStroke2": "#c7e0f4",
  "compoundBrandBackground1": "#0078d4",
  "compoundBrandBackground1Hover": "#106ebe",
  "compoundBrandBackground1Pressed": "#004578",
  "compoundBrandForeground1": "#0078d4",
  "compoundBrandForeground1Hover": "#106ebe",
  "compoundBrandForeground1Pressed": "#004578",
  "compoundBrandStroke1": "#0078d4",
  "compoundBrandStroke1Hover": "#106ebe",
  "compoundBrandStroke1Pressed": "#004578",
  "neutralBackground1": "#ffffff",
  "neutralBackground1Hover": "#f5f5f5",
  "neutralBackground1Pressed": "#ebebeb",
  "neutralBackground1Selected": "#ebebeb",
  "neutralBackground2": "#ffffff",
  "neutralBackground2Hover": "#f0f0f0",
  "neutralBackground2Pressed": "#ebebeb",
  "neutralBackground2Selected": "#e6e6e6",
  "neutralBackground3": "#f5f5f5",
  "neutralBackground3Hover": "#ebebeb",
  "neutralBackground3Pressed": "#d6d6d6",
  "neutralBackground3Selected": "#e0e0e0",
  "neutralBackground4": "#f0f0f0",
  "neutralBackground4Hover": "#fafafa",
  "neutralBackground4Pressed": "#f5f5f5",
  "neutralBackground4Selected": "#ffffff",
  "neutralBackground5": "#ebebeb",
  "neutralBackground5Hover": "#f5f5f5",
  "neutralBackground5Pressed": "#f0f0f0",
  "neutralBackground5Selected": "#fafafa",
  "neutralBackground6": "#e6e6e6",
  "neutralBackgroundDisabled": "#f0f0f0",
  "neutralBackgroundInverted": "#616161",
  "neutralForeground1": "#242424",
  "neutralForeground1Hover": "#242424",
  "neutralForeground1Pressed": "#242424",
  "neutralForeground1Selected": "#242424",
  "neutralForeground2": "#000000",
  "neutralForeground2BrandHover": "#106ebe",
  "neutralForeground2BrandPressed": "#004578",
  "neutralForeground2BrandSelected": "#005a9e",
  "neutralForeground2Hover": "#242424",
  "neutralForeground2Pressed": "#242424",
  "neutralForeground2Selected": "#242424",
  "neutralForeground3": "#616161",
  "neutralForeground3BrandHover": "#106ebe",
  "neutralForeground3BrandPressed": "#004578",
  "neutralForeground3BrandSelected": "#005a9e",
  "neutralForeground3Hover": "#424242",
  "neutralForeground3Pressed": "#424242",
  "neutralForeground3Selected": "#424242",
  "neutralForeground4": "#808080",
  "neutralForegroundDisabled": "#757575",
  "neutralForegroundInverted": "#ffffff",
  "neutralForegroundInvertedLink": "#ffffff",
  "neutralForegroundInvertedLinkHover": "#ffffff",
  "neutralForegroundInvertedLinkPressed": "#ffffff",
  "neutralForegroundInvertedLinkSelected": "#ffffff",
  "neutralForegroundOnBrand": "#ffffff",
  "neutralForegroundOnBrandHover": "#ffffff",
  "neutralForegroundOnBrandPressed": "#ffffff",
  "neutralForegroundOnBrandSelected": "#ffffff",
  "neutralStencil1": "#e6e6e6",
  "neutralStencil2": "#fafafa",
  "neutralStroke1": "#f0f0f0",
  "neutralStroke1Hover": "#c7c7c7",
  "neutralStroke1Pressed": "#b3b3b3",
  "neutralStroke1Selected": "#bdbdbd",
  "neutralStroke2": "#d6d6d6",
  "neutralStroke3": "#f0f0f0",
  "neutralStrokeAccessible": "#616161",
  "neutralStrokeAccessibleHover": "#575757",
  "neutralStrokeAccessiblePressed": "#4d4d4d",
  "neutralStrokeAccessibleSelected": "#0078d4",
  "neutralStrokeDisabled": "#e0e0e0",
  "redBackground1": "#f9f0f2",
  "redBackground2": "#d69ca5",
  "redBackground3": "#750b1c",
  "redBorder1": "#d69ca5",
  "redBorder2": "#750b1c",
  "redBorderActive": "#750b1c",
  "redForeground1": "#690a19",
  "redForeground2": "#d69ca5",
  "redForeground3": "#750b1c",
  "strokeFocus1": "#ffffff",
  "strokeFocus2": "#000000",
  "subtleBackground": "transparent",
  "subtleBackgroundHover": "#f5f5f5",
  "subtleBackgroundPressed": "#e0e0e0",
  "subtleBackgroundSelected": "#ebebeb",
  "transparentBackground": "transparent",
  "transparentBackgroundHover": "transparent",
  "transparentBackgroundPressed": "transparent",
  "transparentBackgroundSelected": "transparent",
  "transparentStroke": "transparent",
  "transparentStrokeDisabled": "transparent",
  "transparentStrokeInteractive": "transparent",
}
`;

exports[`createMacOSColorAliasTokens test mode: light, isHighContrast: true 1`] = `
Object {
  "brandBackground": "#0078d4",
  "brandBackground2": "#eff6fc",
  "brandBackgroundDisabled": "#d1d1d1",
  "brandBackgroundHover": "#106ebe",
  "brandBackgroundPressed": "#106ebe",
  "brandBackgroundSelected": "#005a9e",
  "brandBackgroundStatic": "#0078d4",
  "brandForeground1": "#0078d4",
  "brandForeground1Disabled": "#757575",
  "brandForeground1Pressed": "#004578",
  "brandForeground2": "#106ebe",
  "brandForegroundLink": "#0078d4",
  "brandForegroundLinkHover": "#106ebe",
  "brandForegroundLinkPressed": "#004578",
  "brandForegroundLinkSelected": "#005a9e",
  "brandStroke1": "#0078d4",
  "brandStroke2": "#c7e0f4",
  "compoundBrandBackground1": "#0078d4",
  "compoundBrandBackground1Hover": "#106ebe",
  "compoundBrandBackground1Pressed": "#004578",
  "compoundBrandForeground1": "#0078d4",
  "compoundBrandForeground1Hover": "#106ebe",
  "compoundBrandForeground1Pressed": "#004578",
  "compoundBrandStroke1": "#0078d4",
  "compoundBrandStroke1Hover": "#106ebe",
  "compoundBrandStroke1Pressed": "#004578",
  "neutralBackground1": "#ffffff",
  "neutralBackground1Hover": "#f5f5f5",
  "neutralBackground1Pressed": "#ebebeb",
  "neutralBackground1Selected": "#ebebeb",
  "neutralBackground2": "#ffffff",
  "neutralBackground2Hover": "#f0f0f0",
  "neutralBackground2Pressed": "#ebebeb",
  "neutralBackground2Selected": "#e6e6e6",
  "neutralBackground3": "#f5f5f5",
  "neutralBackground3Hover": "#ebebeb",
  "neutralBackground3Pressed": "#d6d6d6",
  "neutralBackground3Selected": "#e0e0e0",
  "neutralBackground4": "#f0f0f0",
  "neutralBackground4Hover": "#fafafa",
  "neutralBackground4Pressed": "#f5f5f5",
  "neutralBackground4Selected": "#ffffff",
  "neutralBackground5": "#ebebeb",
  "neutralBackground5Hover": "#f5f5f5",
  "neutralBackground5Pressed": "#f0f0f0",
  "neutralBackground5Selected": "#fafafa",
  "neutralBackground6": "#e6e6e6",
  "neutralBackgroundDisabled": "#f0f0f0",
  "neutralBackgroundInverted": "#616161",
  "neutralForeground1": "#000000",
  "neutralForeground1Hover": "#000000",
  "neutralForeground1Pressed": "#000000",
  "neutralForeground1Selected": "#000000",
  "neutralForeground2": "#000000",
  "neutralForeground2BrandHover": "#106ebe",
  "neutralForeground2BrandPressed": "#004578",
  "neutralForeground2BrandSelected": "#005a9e",
  "neutralForeground2Hover": "#242424",
  "neutralForeground2Pressed": "#242424",
  "neutralForeground2Selected": "#242424",
  "neutralForeground3": "#000000",
  "neutralForeground3BrandHover": "#106ebe",
  "neutralForeground3BrandPressed": "#004578",
  "neutralForeground3BrandSelected": "#005a9e",
  "neutralForeground3Hover": "#424242",
  "neutralForeground3Pressed": "#424242",
  "neutralForeground3Selected": "#424242",
  "neutralForeground4": "#424242",
  "neutralForegroundDisabled": "#757575",
  "neutralForegroundInverted": "#ffffff",
  "neutralForegroundInvertedLink": "#ffffff",
  "neutralForegroundInvertedLinkHover": "#ffffff",
  "neutralForegroundInvertedLinkPressed": "#ffffff",
  "neutralForegroundInvertedLinkSelected": "#ffffff",
  "neutralForegroundOnBrand": "#ffffff",
  "neutralForegroundOnBrandHover": "#ffffff",
  "neutralForegroundOnBrandPressed": "#ffffff",
  "neutralForegroundOnBrandSelected": "#ffffff",
  "neutralStencil1": "#e6e6e6",
  "neutralStencil2": "#fafafa",
  "neutralStroke1": "#616161",
  "neutralStroke1Hover": "#c7c7c7",
  "neutralStroke1Pressed": "#b3b3b3",
  "neutralStroke1Selected": "#bdbdbd",
  "neutralStroke2": "#000000",
  "neutralStroke3": "#616161",
  "neutralStrokeAccessible": "#242424",
  "neutralStrokeAccessibleHover": "#575757",
  "neutralStrokeAccessiblePressed": "#4d4d4d",
  "neutralStrokeAccessibleSelected": "#0078d4",
  "neutralStrokeDisabled": "#e0e0e0",
  "redBackground1": "#f9f0f2",
  "redBackground2": "#d69ca5",
  "redBackground3": "#750b1c",
  "redBorder1": "#d69ca5",
  "redBorder2": "#750b1c",
  "redBorderActive": "#750b1c",
  "redForeground1": "#690a19",
  "redForeground2": "#d69ca5",
  "redForeground3": "#750b1c",
  "strokeFocus1": "#ffffff",
  "strokeFocus2": "#000000",
  "subtleBackground": "transparent",
  "subtleBackgroundHover": "#f5f5f5",
  "subtleBackgroundPressed": "#e0e0e0",
  "subtleBackgroundSelected": "#ebebeb",
  "transparentBackground": "transparent",
  "transparentBackgroundHover": "transparent",
  "transparentBackgroundPressed": "transparent",
  "transparentBackgroundSelected": "transparent",
  "transparentStroke": "#000000",
  "transparentStrokeDisabled": "#bdbdbd",
  "transparentStrokeInteractive": "#666666",
}
`;

exports[`createMacOSShadowAliasTokens test mode: dark, isHighContrast: false 1`] = `
Object {
  "shadow16": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000047",
      "x": 0,
      "y": 8,
    },
  },
  "shadow16brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000040",
      "x": 0,
      "y": 8,
    },
  },
  "shadow2": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000047",
      "x": 0,
      "y": 1,
    },
  },
  "shadow28": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#0000007a",
      "x": 0,
      "y": 14,
    },
  },
  "shadow28brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#00000040",
      "x": 0,
      "y": 14,
    },
  },
  "shadow2brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000040",
      "x": 0,
      "y": 1,
    },
  },
  "shadow4": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000047",
      "x": 0,
      "y": 2,
    },
  },
  "shadow4brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000040",
      "x": 0,
      "y": 2,
    },
  },
  "shadow64": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#0000007a",
      "x": 0,
      "y": 32,
    },
  },
  "shadow64brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#00000040",
      "x": 0,
      "y": 32,
    },
  },
  "shadow8": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000047",
      "x": 0,
      "y": 4,
    },
  },
  "shadow8brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000040",
      "x": 0,
      "y": 4,
    },
  },
}
`;

exports[`createMacOSShadowAliasTokens test mode: dark, isHighContrast: true 1`] = `
Object {
  "shadow16": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000047",
      "x": 0,
      "y": 8,
    },
  },
  "shadow16brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000040",
      "x": 0,
      "y": 8,
    },
  },
  "shadow2": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000047",
      "x": 0,
      "y": 1,
    },
  },
  "shadow28": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#0000007a",
      "x": 0,
      "y": 14,
    },
  },
  "shadow28brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#00000040",
      "x": 0,
      "y": 14,
    },
  },
  "shadow2brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000040",
      "x": 0,
      "y": 1,
    },
  },
  "shadow4": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000047",
      "x": 0,
      "y": 2,
    },
  },
  "shadow4brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000040",
      "x": 0,
      "y": 2,
    },
  },
  "shadow64": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#0000007a",
      "x": 0,
      "y": 32,
    },
  },
  "shadow64brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#00000040",
      "x": 0,
      "y": 32,
    },
  },
  "shadow8": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000047",
      "x": 0,
      "y": 4,
    },
  },
  "shadow8brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000040",
      "x": 0,
      "y": 4,
    },
  },
}
`;

exports[`createMacOSShadowAliasTokens test mode: light, isHighContrast: false 1`] = `
Object {
  "shadow16": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000001f",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000024",
      "x": 0,
      "y": 8,
    },
  },
  "shadow16brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000040",
      "x": 0,
      "y": 8,
    },
  },
  "shadow2": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000001f",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000024",
      "x": 0,
      "y": 1,
    },
  },
  "shadow28": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000033",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#0000003d",
      "x": 0,
      "y": 14,
    },
  },
  "shadow28brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#00000040",
      "x": 0,
      "y": 14,
    },
  },
  "shadow2brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000040",
      "x": 0,
      "y": 1,
    },
  },
  "shadow4": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000001f",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000024",
      "x": 0,
      "y": 2,
    },
  },
  "shadow4brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000040",
      "x": 0,
      "y": 2,
    },
  },
  "shadow64": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000033",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#0000003d",
      "x": 0,
      "y": 32,
    },
  },
  "shadow64brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#00000040",
      "x": 0,
      "y": 32,
    },
  },
  "shadow8": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000001f",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000024",
      "x": 0,
      "y": 4,
    },
  },
  "shadow8brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000040",
      "x": 0,
      "y": 4,
    },
  },
}
`;

exports[`createMacOSShadowAliasTokens test mode: light, isHighContrast: true 1`] = `
Object {
  "shadow16": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000047",
      "x": 0,
      "y": 8,
    },
  },
  "shadow16brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000040",
      "x": 0,
      "y": 8,
    },
  },
  "shadow2": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000047",
      "x": 0,
      "y": 1,
    },
  },
  "shadow28": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#0000007a",
      "x": 0,
      "y": 14,
    },
  },
  "shadow28brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#00000040",
      "x": 0,
      "y": 14,
    },
  },
  "shadow2brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000040",
      "x": 0,
      "y": 1,
    },
  },
  "shadow4": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000047",
      "x": 0,
      "y": 2,
    },
  },
  "shadow4brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000040",
      "x": 0,
      "y": 2,
    },
  },
  "shadow64": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#0000007a",
      "x": 0,
      "y": 32,
    },
  },
  "shadow64brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#00000040",
      "x": 0,
      "y": 32,
    },
  },
  "shadow8": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000047",
      "x": 0,
      "y": 4,
    },
  },
  "shadow8brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000040",
      "x": 0,
      "y": 4,
    },
  },
}
`;
